src/other/mico-2.3.12/test/idl/error/case20.idl

interface Foo
{
  void op(in long object);
};

